Update page2.html 개인관계점수 저장 됨
C:\Users\ido31\OneDrive\Desktop\0819bc>node server.js
인증점수 저장 완료: C:\Users\ido31\OneDrive\Desktop\0819bc\db\ConfirmScoreDB.xlsx
=== 검증자 선정 결과 ===
⚠️ 조건(0.5 이상)에 맞는 검증자가 없습니다.
✅ nameDB 로드 완료: 0
서버 실행 중: http://localhost:3000
클라이언트 연결됨: skSGKcfi9IdDpMbNAAAB
🟢 registerUser 이벤트 수신: { walletAddr: '0x1234', nickname: '1' }
신규 사용자 등록: 0x1234 (1)
클라이언트 연결됨: QmWMw8qk1Fh5HPcXAAAD
🟢 registerUser 이벤트 수신: { walletAddr: '0x2345', nickname: '2' }
신규 사용자 등록: 0x2345 (2)
🖱️ linkClicked: 1 -> undefined | https://tistory.com
개인관계점수 저장 완료: C:\Users\ido31\OneDrive\Desktop\0819bc\db\PRelScoreDB.xlsx
📊 1 점수: 0
C:\Users\ido31\OneDrive\Desktop\0819bc\server.js:175
    const toSocketInfo = userSockets.get(toUser.toLowerCase());
                                                ^

TypeError: Cannot read properties of undefined (reading 'toLowerCase')
    at Socket.<anonymous> (C:\Users\ido31\OneDrive\Desktop\0819bc\server.js:175:49)
    at Socket.emit (node:events:518:28)
    at Socket.emitUntyped (C:\Users\ido31\OneDrive\Desktop\0819bc\node_modules\socket.io\dist\typed-events.js:69:22)
    at C:\Users\ido31\OneDrive\Desktop\0819bc\node_modules\socket.io\dist\socket.js:697:39
    at process.processTicksAndRejections (node:internal/process/task_queues:85:11)

Node.js v22.18.0

--- a/page2.html
+++ b/page2.html
@@ -58,18 +58,31 @@ socket.on('receiveMessage', ({ fromUser, message }) => {
   addMessage(fromUser, message);
 });
 
+
 function addMessage(fromUser, message) {
   const div = document.createElement('div');
   div.classList.add('message');
 
-  // 링크 감지: http:// 또는 https:// 로 시작하면 <a> 태그로
   const urlRegex = /(https?:\/\/[^\s]+)/g;
-  const formattedMessage = message.replace(urlRegex, url => `<a href="${url}" target="_blank">${url}</a>`);
+  const formattedMessage = message.replace(urlRegex, url => 
+    `<a href="#" class="chat-link" data-url="${url}">${url}</a>`
+  );
 
   div.innerHTML = `<span class="from">${fromUser}:</span> ${formattedMessage}`;
-  chatBox.appendChild(div);
-  chatBox.scrollTop = chatBox.scrollHeight;
+  document.getElementById('chatBox').appendChild(div);
+  div.scrollIntoView();
+
+  // 링크 클릭 이벤트 등록
+  div.querySelectorAll('.chat-link').forEach(link => {
+    link.addEventListener('click', e => {
+      e.preventDefault(); // 새로고침 막기
+      const url = link.dataset.url;
+      socket.emit('linkClicked', { fromUser, link: url });
+      console.log('링크 클릭:', fromUser, url);
+    });
+  });
 }
+
 
 // 메시지 전송
 sendBtn.addEventListener('click', () => {
